objects/DbAccChanges__c.object
<CustomObject>
    <description>Backend hidden object to track necessary Account changes, such as license # changes, for data warehousing and integrations.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DBAccChanges</relationshipLabel>
        <relationshipName>DBAccChanges</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorValue__c</fullName>
        <label>PriorValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DbAccChanges</label>
    <nameField>
        <displayFormat>CHG{00000000}</displayFormat>
        <label>DbAccChanges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DBAccChanges</pluralLabel>
    <recordTypes>
        <fullName>License_Change</fullName>
        <active>true</active>
        <label>License Change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>